using UnityEngine;

public class Constans 
{
    // anim dragon
    public const string SPEED = "Speed";
    public const string ATTACK = "Attack";
    public const string IS_ALIVE = "IsAlive";
    // tag of player
    public const string WEAPON_TAG = "Weapon";
    public const string PLAYER_TAG = "Player";
    public const string DRAGON_TAG = "Dragon";
    // giá trị float của enemy
    public const float dispawnTime = 7f;
    public const float distanceNearPlayer = 3.5f;
    public const float distanceCanAtk = 2f;
    public const int hitCountToImmune = 3;
    public const float immuneDuration = 5f;

}
