public class Constans 
{
    //Item
    public const string ITEM_TAG = "Item";
    //Camera
    public const string CameraFollow_1 = "CinemachineCamera Follow 1";
    //Terrain
    public const string TERRAIN_Tag = "Terrain";
    // anim dragon
    public const string SPEED = "Speed";
    public const string ATTACK = "Attack";
    public const string IS_ALIVE = "IsAlive";
    // tag of player
    public const string WEAPON_TAG = "Weapon";
    public const string PLAYER_TAG = "Player";
    public const string DRAGON_TAG = "Dragon";
    // giá trị float của enemy
    #region enemy's value

    public const float dispawnTime = 7f;
    public const float distanceNearPlayer = 4.5f;
    public const float distanceCanAtk = 3.25f;
    public const int hitCountToImmune = 4;
    public const float immuneDuration = 5f;   

    #endregion

}
