using UnityEngine;

public class Constans 
{
    // anim dragon
    public const string SPEED = "Speed";
    public const string ATTACK = "Attack";
    public const string IS_ALIVE = "IsAlive";
    // tag of player
    public const string WEAPON_TAG = "Weapon";
    public const string PLAYER_TAG = "Player";
    public const string DRAGON_TAG = "Dragon";

}
